--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ dev =
     mypy
     pytest
     pytest-cov
+    pytest-xdist
     tox
 
 [options.package_data]
@@ -50,4 +51,4 @@ packaged =
     startup.template.sh
 
 [tool:pytest]
-addopts = --cov --cov-report=term-missing
+addopts = --cov --cov-report=term-missing -nauto
