--- a/mypy.ini
+++ b/mypy.ini
@@ -1,3 +1,3 @@
 [mypy]
 strict = True
-exclude = setup.py|venv|build|example|tests/test_packages
+exclude = setup.py|venv|build|example|tests/end_to_end/test_packages
