--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ classifiers =
 packages = find:
 install_requires =
     yen>=0.4.2
+    tomli>=1.1.0; python_version<'3.11'
 python_requires = >=3.8
 package_dir = =src
 
