Bundle makeself, and update license

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,8 @@ dev =
 [options.package_data]
 packaged =
 	py.typed
+    makeself.sh
+    makeself-header.sh
 
 [tool:pytest]
 addopts = --cov --cov-report=term-missing -nauto
