Allow specifying Python version

--- a/example/minesweeper/packaged.toml
+++ b/example/minesweeper/packaged.toml
@@ -1,3 +1,4 @@
 output_path = "minesweeper.bin"
 build_command = "pip install ."
 startup_command = "python -m minesweeper"
+python_version = "3.11"
