--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,12 +78,12 @@ jobs:
           # aliens: requires no source
           ALIENS_NAME="aliens-${{ matrix.target }}.bin"
           ALIENS_PATH=${PWD}/${ALIENS_NAME}
-          packaged ALIENS_NAME 'pip install pygame' 'python -m pygame.examples.aliens'
+          packaged $ALIENS_NAME 'pip install pygame' 'python -m pygame.examples.aliens'
 
           # textual: requires no source
           TEXTUAL_NAME="textual-${{ matrix.target }}.bin"
           TEXTUAL_PATH=${PWD}/${TEXTUAL_NAME}
-          packaged TEXTUAL_NAME 'pip install pygame' 'python -m textual'
+          packaged $TEXTUAL_NAME 'pip install pygame' 'python -m textual'
 
           # ./examples/mandelbrot
           MANDELBROT_NAME="mandelbrot-${{ matrix.target }}.bin"
