--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,29 +27,15 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - {
-              name: "Linux-x86_64",
-              target: x86_64-unknown-linux-musl,
-              os: ubuntu-20.04,
-            }
-          - {
-              name: "Linux-aarch64",
-              target: aarch64-unknown-linux-musl,
-              os: ubuntu-latest,
-            }
-          - {
-              name: "macOS-x86_64",
-              target: x86_64-apple-darwin,
-              os: macOS-latest,
-            }
-          - {
-              name: "macOS-aarch64",
-              target: aarch64-apple-darwin,
-              os: macOS-latest,
-            }
+          - { name: "Linux-x86_64", target: x86_64-linux, os: ubuntu-20.04 }
+          # No arm linux OS available on github actions.
+          # Find another way.
+          # - { name: "Linux-aarch64", target: aarch64-linux, os: ubuntu-latest }
+          - { name: "macOS-x86_64", target: x86_64-darwin, os: macOS-13 }
+          - { name: "macOS-aarch64", target: aarch64-darwin, os: macOS-14 }
           # - {
           #     name: "windows-x86_64",
-          #     target: x86_64-pc-windows-msvc,
+          #     target: x86_64-windows,
           #     os: windows-latest,
           #   }
     steps:
