--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
         id: runcmd
         with:
           arch: aarch64
-          distro: ${{ matrix.os }}
+          distro: ubuntu20.04
           # Not required, but speeds up builds by storing container images in
           # a GitHub package registry.
           githubToken: ${{ github.token }}
