--- a/.github/workflows/build-cross.yml
+++ b/.github/workflows/build-cross.yml
@@ -46,6 +46,7 @@ jobs:
           # a GitHub package registry.
           githubToken: ${{ github.token }}
           run: |
+            apt update
             apt install python3
             pip install .
 
