--- a/.github/workflows/build-cross.yml
+++ b/.github/workflows/build-cross.yml
@@ -47,7 +47,7 @@ jobs:
           githubToken: ${{ github.token }}
           run: |
             apt update
-            apt install python3 -y
+            apt install python3-pip -y
             pip install .
 
             # aliens: requires no source
