--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -11,7 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        include:
+          - { python-version: "3.8", tox-env: "py38" }
+          - { python-version: "3.9", tox-env: "py39" }
+          - { python-version: "3.10", tox-env: "py310" }
+          - { python-version: "3.11", tox-env: "py311" }
+          - { python-version: "3.12", tox-env: "py312" }
     name: Python ${{ matrix.python-version }} tests
     steps:
       - uses: actions/checkout@v2
@@ -23,4 +28,4 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements-dev.txt
       - name: Run tests and type checking
-        run: tox
+        run: tox -e ${{matrix.tox-env }}
