--- a/.github/workflows/build-cross.yml
+++ b/.github/workflows/build-cross.yml
@@ -45,6 +45,10 @@ jobs:
           # Not required, but speeds up builds by storing container images in
           # a GitHub package registry.
           githubToken: ${{ github.token }}
+          # workaround for $GITHUB_OUTPUT not available in run-on-arch:
+          # https://github.com/uraimo/run-on-arch-action/issues/52
+          dockerRunArgs: |
+            --volume /home/runner/work/_temp:/home/runner/work/_temp
           run: |
             apt update
             apt install python3-pip -y
