--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -16,7 +16,7 @@ jobs:
           - { python-version: "3.9", tox-env: "py39" }
           - { python-version: "3.10", tox-env: "py310" }
           - { python-version: "3.11", tox-env: "py311" }
-          - { python-version: "3.12", tox-env: "py312" }
+          - { python-version: "3.12", tox-env: "py312,py312-type" }
     name: Python ${{ matrix.python-version }} tests
     steps:
       - uses: actions/checkout@v2
